removed id's from li tags

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <footer>
       <ul class="meta inline-list">
-        <li id="link1"><a href="mailto:pwadams@me.com">pwadams@me.com</a></li>
-        <li id="link2"><a href="http://www.twitter.com/pwadams" target="_blank">twitter/pwadams</a></li>
-        <li id="link3"><a href="http://www.github.com/pwadams" target="_blank">github/pwadams</a></li>
+        <li><a href="mailto:pwadams@me.com">pwadams@me.com</a></li>
+        <li><a href="http://www.twitter.com/pwadams" target="_blank">twitter/pwadams</a></li>
+        <li><a href="http://www.github.com/pwadams" target="_blank">github/pwadams</a></li>
       </ul>
     </footer>
   </div>
